refactor(Http11Processor): final 추가 및 메서드명, 에러메세지 개선